--- a/node_020_student_v2/views/layout.pug
+++ b/node_020_student_v2/views/layout.pug
@@ -8,4 +8,12 @@ html
     link(rel='stylesheet', href='/css/main.css')
     script(src="/js/main.js")
   body
+    nav
+      ul.menu
+        li
+          a(href="/") 홈
+        li 
+          a(href="/student") 학생정보
+        li
+          a(href="/about") 나의홈
     block content
