--- a/node_020_student_v2/views/student/list.pug
+++ b/node_020_student_v2/views/student/list.pug
@@ -8,12 +8,16 @@ block content
     table.student.list
         thead 
             tr 
+                th Seq
                 th 학번
                 th 이름
                 th 학과
-                tr 
-                    td 
-                    td 
-                    td
+        tbody
+            each item,index in stList
+                tr
+                    td #{index+1} 
+                    td= item.st_num
+                    td= item.st_name
+                    td= item.st_dept
     div.student.btn_box
         a(href="/student/insert") 학생정보 추가
