--- a/node_910_readbook/public/css/books/main.css
+++ b/node_910_readbook/public/css/books/main.css
@@ -4,6 +4,7 @@
 section.books {
   flex: 1;
   display: flex;
+  overflow: auto; /* article 내에서만 스크롤! */
 }
 
 aside {
@@ -39,4 +40,22 @@ article.body {
   flex: 5;
   border: 1px solid green;
   height: 100%;
+  overflow: auto; /* 여기도 스크롤! 이거빼면 도서목록쪼개짐 */
+}
+
+@media screen and (max-width: 768px) {
+  /* 현재화면이 스마트폰 세로화면 768px보다 작으면 */
+  section.books {
+    flex-direction: column; /* 화면 줄이면 도서~ 목록이 리스트 위로간다~~ */
+  }
+
+  aside {
+    flex: 0;
+    flex-direction: row; /* 메뉴가 가로로 나온다~~ */
+    padding-top: 0;
+    a {
+      text-align: center;
+      font-size: 1.2rem;
+    }
+  }
 }
