--- a/node_910_readbook/public/css/main.css
+++ b/node_910_readbook/public/css/main.css
@@ -39,10 +39,10 @@ header {
 }
 
 nav {
-  background-color: #333f;
+  background-color: #333;
   color: white;
   padding: 10px;
-  /* 중첩css (nav ul) 최신버전에서 된다~~ */
+  /* 중첩css (nav ul{}) 최신버전에서 된다~~ */
   ul {
     list-style-type: none;
     display: flex;
