상품검색, 정렬

--- a/node_030_iolist_v2/views/product/detail.pug
+++ b/node_030_iolist_v2/views/product/detail.pug
@@ -1,11 +1,16 @@
 extends ../layout
 
 block content
-    script(src="/js/pdetail.js")
     div.detail
-        h3 #{PRODUCT.p_name} 상품자세히보기
-        p= PRODUCT.p_code
-        p= PRODUCT.p_item
+        div.image
+            if PRODUCT.p_image_name 
+                img(src=`/uploads/${PRODUCT.p_image_name}`,width="300px", alt=`${PRODUCT.p_image_origin_name}`)
+            else 
+                img(src="/images/noImage.svg", width="300px")
+        div
+            h3 #{PRODUCT.p_name} 상품자세히보기
+            p= PRODUCT.p_code
+            p= PRODUCT.p_item
     table.detail.iolist
         tr
             th 거래일자
@@ -13,12 +18,4 @@ block content
             th 거래방법
             th 거래처코드
             th 거래처명
-            each item in PRODUCT.IOS
-                tr 
-                    td= item.io_date
-                    td= item.io_time 
-                    td #{item.io_div =="1"? "매입" : "매출"}
-                    td= item.io_dcode
-                    td= item.IO_거래처.d_name
-                    td= item.IO_거래처.d_ceo
 
