--- a/node_030_iolist_v2/public/css/product.css
+++ b/node_030_iolist_v2/public/css/product.css
@@ -165,3 +165,44 @@ div.img_box {
 input#p_image {
   display: none;
 }
+
+table.products {
+  /* 더블클릭시 선택방지 */
+  th,
+  td {
+    user-select: none;
+  }
+  /* 
+  nth-of-type(), nth-of-childe() 에서 변수 n 을 사용하면
+  마치 for() 반복문을 사용하는 것처럼 동작한다
+  n 의 값은 index 의 연속된 값을 나타낸다
+  n + 5 : 만약 n이면 5개이면, n : 0,1,2,3,4 가 되고 n + 5 : 5,6,7,8,9 의 값이 된다
+  결국 n + 5 를 사용하면 5번 요소부터 이후의 요소 모두에 적용하기
+  
+  매입단가 가 5번째여서 매입단가, 매출단가만 숫자가 오른쪽으로붙는다
+
+  td:nth-of-type(5..6..) 일일이 안쓰게
+
+
+  for(i=0; i<length ; i++ ) {
+    n = i + 5;
+    if(n>7) break;  js 에서 이런식으로 안쓰고 하려고
+
+    td:nth-of-type(n + 5):nth-of-type(-n + 7) {
+      text-align: right;
+    }
+    이런거나
+  */
+  td:nth-of-type(n + 5) {
+    text-align: right;
+  }
+
+  span {
+    /* display none 으로하면 화면출렁거림 */
+    visibility: hidden;
+    padding-left: 20px;
+  }
+  span.sort {
+    visibility: visible;
+  }
+}
