--- a/node_910_memo/public/css/index.css
+++ b/node_910_memo/public/css/index.css
@@ -53,10 +53,61 @@ ul {
 form.input {
   display: flex;
   flex-direction: column;
+  align-items: center;
   input {
     /* flex: 1; */
     width: 100%;
     padding: 5px;
     margin: 5px 0;
+    &.toimage {
+      display: none;
+      /* 파일업로드 안보이게 */
+    }
+  }
+  img.memo {
+    transition: 0.7s;
+    &:hover {
+      cursor: pointer;
+      opacity: 0.5;
+      box-shadow: inset 100px 100px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+/* img:hover {
+  cursor: pointer;
+  width: 120px;
+  height: 100px;
+} */
+
+input.update {
+  background-color: greenyellow;
+  color: black;
+  border: none;
+  outline: none;
+}
+
+input.btn_delete {
+  background-color: red;
+  color: white;
+  border: none;
+  outline: none;
+}
+
+/* 화면이 800보다 작아지면 */
+@media screen and (max-width: 800px) {
+  footer,
+  header,
+  section.main {
+    width: 95%;
+  }
+
+  section.main {
+    flex-direction: column;
+  }
+  div.aside:nth-of-type(1) {
+    /* 순서바꾸기 원래 입력박스가 아래인데 위로가짐 */
+    /* nth 1 : 1번 아이템을 order :2 ; -> 2번으로 바꾸어라 */
+    /* order : flex-item 만 사용가능 */
+    order: 2;
   }
 }
