--- a/node_030_iolist_v2/views/iolist/list.pug
+++ b/node_030_iolist_v2/views/iolist/list.pug
@@ -2,6 +2,7 @@ extends ../layout
 
 block content
     link(rel="stylesheet", href="/css/iolist.css")
+    script(src="/js/iolist.js")
     div.iolist.btn_box 
         if user 
             a(href="/iolist/insert") 추가
@@ -17,7 +18,7 @@ block content
                 th 거래방법
         tbody 
             each item in IOLIST
-                tr 
+                tr(data-seq=`${item.io_seq}`,class= `${item.io_delete == 1 ? 'delete' : ''}`)
                     td= item.io_date
                     td= item.io_time 
                     td= item.io_pcode
