--- a/nemo_test/views/index.pug
+++ b/nemo_test/views/index.pug
@@ -1,5 +1,41 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  link(rel="stylesheet", href="/css/nemo.css")
+  script(src="/js/nemo.js")
+  h1 네모로직 구현해보기
+  form
+    div.nemo_table
+      div.row.d1
+        section.nemo.n1
+        section.nemo.n2
+        section.nemo.n3
+        section.nemo.n4
+        section.nemo.n5
+      div.row.d2
+        section.nemo.n1
+        section.nemo.n2
+        section.nemo.n3
+        section.nemo.n4
+        section.nemo.n5
+      div.row.d3
+        section.nemo.n1
+        section.nemo.n2
+        section.nemo.n3
+        section.nemo.n4
+        section.nemo.n5
+      div.row.d4
+        section.nemo.n1
+        section.nemo.n2
+        section.nemo.n3
+        section.nemo.n4
+        section.nemo.n5
+      div.row.d5
+        section.nemo.n1
+        section.nemo.n2
+        section.nemo.n3
+        section.nemo.n4
+        section.nemo.n5
+      button.check 저장
+
+    
